--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,6 @@
 body {
   margin: 0;
-  /* font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif; */
-
-  /* font-family: "Roboto", sans-serif; */
-  /* font-family: "Amatic SC", cursive; */
-  font-family: "Noto Serif", serif;
+  font-family: "Amatic SC", cursive;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
