--- a/src/App.css
+++ b/src/App.css
@@ -62,6 +62,7 @@
 .donutchart-text {
   /* font-family: "Roboto"; */
   font-family: "Amatic SC", cursive;
+  font-size: 25px;
   fill: #607580;
 }
 .donutchart-text-val {
@@ -82,6 +83,7 @@ body {
   /* padding: 40px; */
   /* font-family: "Roboto"; */
   font-family: "Amatic SC", cursive;
+  font-size: 25px;
   text-align: center;
 }
 
