--- a/src/App.css
+++ b/src/App.css
@@ -63,7 +63,7 @@
   /* font-family: "Roboto"; */
   font-family: "Amatic SC", cursive;
   font-size: 20px;
-  fill: #607580;
+  fill: #fff;
 }
 .donutchart-text-val {
   font-size: 22px;
