--- a/src/App.css
+++ b/src/App.css
@@ -63,6 +63,7 @@
   /* font-family: "Roboto"; */
   font-family: "Amatic SC", cursive;
   font-size: 20px;
+  font-weight: bold;
   fill: #fff;
 }
 .donutchart-text-val {
